--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                                 <label class="btn btn-option">
                                     <input type="radio" name="options" id="option-enter-ip"> Map by IP
                                 </label>
-                                <label class="btn btn-option">
+                                <label class="btn btn-option disabled">
                                     <input type="radio" name="options" id="option-enter-lat-long"> Map by Lat/Long
                                 </label>
                             </div>
@@ -120,7 +120,7 @@
                                 <select class="selectpicker" id="select-ip-api-provider">
                                     <option>-</option>
                                     <option>http://ip-api.com</option>
-                                    <option data-content="http://ipstack.com <span class='badge badge-danger'>key</span>">http://ipstack.com</option>
+                                    <option data-content="http://ipstack.com <span class='badge badge-danger'>key</span>" disabled>http://ipstack.com</option>
                                 </select>
                             </div>
                         </div>
@@ -152,6 +152,26 @@
             <!----------------------------------------------------------------->
             <!-- END SELECT IP API PROVIDER CARD -->
             <!----------------------------------------------------------------->
+            <!----------------------------------------------------------------->
+            <!-- RESULTS/MAP CARD -->
+            <!----------------------------------------------------------------->
+            <div class="col-md-12 mx-auto is-hidden" id="results-map-card">
+                <div class="card m-t-20">
+                    <div class="card-header">
+                        <h5 class="m-b-0">Results</h5>
+                    </div>
+                    <div class="card-body">
+                        <div class="col-md-4">
+                            <pre id="json-results">
+
+                            </pre>
+                        </div>
+                        <div class="col-md-8">
+
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         <!-- END CONTENT WRAPPER -->
     </div>
@@ -171,51 +191,82 @@
     <script>
         $(function () {
 
-            let slideUp = function(a,b){
-                $('#'+a).slideUp('slow');
-                $('#'+b).slideUp('slow');
+            let slideUp = function (a, b) {
+                $('#' + a).slideUp('slow');
+                $('#' + b).slideUp('slow');
             };
 
-            let slideUpDownOrdered = function(up,down){
-                $('#'+up).slideUp('slow', function () {
-                    $('#'+down).slideDown('slow');
+            let slideUpDownOrdered = function (up, down) {
+                $('#' + up).slideUp('slow', function () {
+                    $('#' + down).slideDown('slow');
                 });
             };
 
-            let slideUpDown = function(up,down){
-                $('#'+up).slideUp('slow');
-                $('#'+down).slideDown('slow');
+            let slideUpDown = function (up, down) {
+                $('#' + up).slideUp('slow');
+                $('#' + down).slideDown('slow');
             };
 
-            let clearApiKeyAndHostnameOrIpTextboxes = function(){
+            let clearApiKeyAndHostnameOrIpTextboxes = function () {
                 $('#api-key-textbox').val("");
                 $('#hostname-or-ip-textbox').val("");
             };
 
-            let slideUpApiKeyAndHostnameOrIpTextboxes = function(){
+            let slideUpApiKeyAndHostnameOrIpTextboxes = function () {
                 slideUp('api-key-slider', 'hostname-or-ip-slider');
             };
 
             let checkEnableLatLonGenerateMapButton = function () {
-                if ($('#search-latitude').val().length > 0 & $('#search-longitude').val().length > 0) {
+                if ($('#search-latitude').val().length > 0 & $('#search-longitude').val().length >
+                    0) {
                     $('#btn-generate-by-latlon').removeClass('disabled');
                 } else {
                     $('#btn-generate-by-latlon').addClass('disabled');
                 }
             };
 
+            let getIpData = function () {
+                let provider = $('#select-ip-api-provider').val();
+                if (provider === "http://ip-api.com") {
+                    getIpApiJson($('#hostname-or-ip-textbox').val());
+                }
+            };
+
+            let getIpApiJson = function (ipOrHostname) {
+                let h = "http://ip-api.com/json/" + ipOrHostname;
+                $.ajax(h, {
+                    dataType: 'json',
+                    success: function (result) {
+                        $('#results-map-card').slideDown();
+                        $('#json-results').html(JSON.stringify(result, undefined, 2))
+                    },
+                    error: function () {
+                        alert("Error! Can't query " + h);
+                    }
+                });
+            };
+
             $('#option-enter-ip').on('click', function () {
-                clearApiKeyAndHostnameOrIpTextboxes();
-                $(this).parent().addClass('btn-primary');
-                $('#option-enter-lat-long').parent().removeClass('btn-primary');
-                slideUpDownOrdered('card-map-by-lat-long','card-map-by-ip');
+                if (!$(this).parent().hasClass('disabled')) {
+                    if ($(this).parent().hasClass('btn-primary')) {
+                        $('#card-map-by-ip').slideUp('slow');
+                        $(this).parent().removeClass('btn-primary');
+                    } else {
+                        clearApiKeyAndHostnameOrIpTextboxes();
+                        $(this).parent().addClass('btn-primary');
+                        $('#option-enter-lat-long').parent().removeClass('btn-primary');
+                        slideUpDownOrdered('card-map-by-lat-long', 'card-map-by-ip');
+                    }
+                }
             });
 
             $('#option-enter-lat-long').on('click', function () {
-                clearApiKeyAndHostnameOrIpTextboxes();
-                $(this).parent().addClass('btn-primary');
-                $('#option-enter-ip').parent().removeClass('btn-primary');
-                slideUpDownOrdered('card-map-by-ip','card-map-by-lat-long');
+                if (!$(this).parent().hasClass('disabled')) {
+                    clearApiKeyAndHostnameOrIpTextboxes();
+                    $(this).parent().addClass('btn-primary');
+                    $('#option-enter-ip').parent().removeClass('btn-primary');
+                    slideUpDownOrdered('card-map-by-ip', 'card-map-by-lat-long');
+                }
             });
 
             $('#api-key-textbox').on('input', function () {
@@ -241,16 +292,16 @@
                 let provider = $(this).val();
                 if (provider != "-") {
                     if (provider === "http://ip-api.com") {
-                        slideUpDown('api-key-slider','hostname-or-ip-slider');
+                        slideUpDown('api-key-slider', 'hostname-or-ip-slider');
                     }
                     if (provider === "http://ipstack.com") {
-                        slideUpDown('hostname-or-ip-slider','api-key-slider');
+                        slideUpDown('hostname-or-ip-slider', 'api-key-slider');
                     }
                 } else {
                     slideUpApiKeyAndHostnameOrIpTextboxes();
                 }
                 clearApiKeyAndHostnameOrIpTextboxes();
-            });            
+            });
 
             $('#search-latitude').on('input', function () {
                 checkEnableLatLonGenerateMapButton();
@@ -258,6 +309,10 @@
 
             $('#search-longitude').on('input', function () {
                 checkEnableLatLonGenerateMapButton();
+            });
+
+            $('#btn-generate-by-ip').on('click', function () {
+                getIpData();
             });
 
         })
