--- a/index.html
+++ b/index.html
@@ -173,6 +173,9 @@
                     </div>
                 </div>
             </div>
+            <!----------------------------------------------------------------->
+            <!-- END RESULTS/MAP CARD -->
+            <!----------------------------------------------------------------->            
         </div>
         <!-- END CONTENT WRAPPER -->
     </div>
