--- a/index.html
+++ b/index.html
@@ -244,7 +244,8 @@
             let getIpData = function () {
                 let provider = $('#select-ip-api-provider').val();
                 if (provider === "http://ip-api.com") {
-                    getIpApiJson(String($('#hostname-or-ip-textbox').val()));
+                    let h = $('#hostname-or-ip-textbox').val();
+                    getIpApiJson(h);
                 }
             };
 
