--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
     <!-- PAGE WRAPPER -->
     <!----------------------------------------------------------------->
     <div class="page-wrapper">
+        <!----------------------------------------------------------------->
         <!-- CONTENT WRAPPER -->
+        <!----------------------------------------------------------------->
         <div class="container-fluid content-wrapper m-t-60">
             <!----------------------------------------------------------------->
             <!-- SELECT MAIN OPTION -->
@@ -75,22 +77,30 @@
                     <div class="card-body">
                         <div class="col-md-8 mx-auto">
                             <div class="row m-t-10">
+                                <!----------------------------------------------------------------->
                                 <!-- LAT -->
+                                <!----------------------------------------------------------------->
                                 <div class="col-md-6">
                                     <div class="form-group">
                                         <label for="search-latitude"><b>Latitude</b></label>
                                         <input type="text" class="form-control" id="search-latitude" placeholder="Latitude">
                                     </div>
                                 </div>
+                                <!----------------------------------------------------------------->
                                 <!-- END LAT -->
+                                <!----------------------------------------------------------------->
+                                <!----------------------------------------------------------------->
                                 <!-- LON -->
+                                <!----------------------------------------------------------------->
                                 <div class="col-md-6">
                                     <div class="form-group">
                                         <label for="search-longitude"><b>Longitude</b></label>
                                         <input type="text" class="form-control" id="search-longitude" placeholder="Longitude">
                                     </div>
                                 </div>
+                                <!----------------------------------------------------------------->
                                 <!-- END LON -->
+                                <!----------------------------------------------------------------->
                             </div>
                         </div>
                     </div>
@@ -116,7 +126,9 @@
                         </div>
                     </div>
                     <div class="card-body">
+                        <!----------------------------------------------------------------->
                         <!-- SELECT PROVIDER -->
+                        <!----------------------------------------------------------------->
                         <div class="row m-t-10">
                             <div class="form-group mx-auto" style="border: 1px solid black;">
                                 <select class="selectpicker" id="select-ip-api-provider">
@@ -127,8 +139,12 @@
                                 </select>
                             </div>
                         </div>
+                        <!----------------------------------------------------------------->
                         <!-- END SELECT PROVIDER -->
+                        <!----------------------------------------------------------------->
+                        <!----------------------------------------------------------------->
                         <!-- ENTER API KEY -->
+                        <!----------------------------------------------------------------->
                         <div class="row m-t-10 is-hidden" id="api-key-slider">
                             <div class="col-md-6 mx-auto">
                                 <div class="form-group">
@@ -136,24 +152,34 @@
                                 </div>
                             </div>
                         </div>
+                        <!----------------------------------------------------------------->
                         <!-- END ENTER API KEY -->
+                        <!----------------------------------------------------------------->
+                        <!----------------------------------------------------------------->
                         <!-- ENTER HOSTNAME OR IP ADDRESS -->
+                        <!----------------------------------------------------------------->
                         <div class="row m-t-10 is-hidden" id="hostname-or-ip-slider">
                             <div class="col-md-6 mx-auto">
                                 <div class="form-group">
                                     <input type="text" class="form-control" id="hostname-or-ip-textbox" placeholder="Enter Hostname or IP">
+                                    <!----------------------------------------------------------------->
                                     <!-- USE CURRENT IP -->
+                                    <!----------------------------------------------------------------->
                                     <div class="inline-field m-t-0">
                                         <input type="checkbox" class="form-check" id="use-current-connection-checkbox">
                                         <label for="use-current-connection">
                                             <small> Use Current IP</small>
                                         </label>
                                     </div>
+                                    <!----------------------------------------------------------------->
                                     <!-- END USE CURRENT IP -->
+                                    <!----------------------------------------------------------------->
                                 </div>
                             </div>
                         </div>
+                        <!----------------------------------------------------------------->
                         <!-- END ENTER HOSTNAME OR IP ADDRESS -->
+                        <!----------------------------------------------------------------->
                     </div>
                     <div class="card-footer text-center">
                         <button class="btn btn-primary disabled" id="btn-generate-by-ip">Generate Map</button>
@@ -173,13 +199,9 @@
                     </div>
                     <div class="card-body">
                         <div class="col-md-4">
-                            <pre id="json-results">
-
-                            </pre>
+                            <pre id="json-results"></pre>
                         </div>
-                        <div class="col-md-8">
-
-                        </div>
+                        <div class="col-md-8"></div>
                     </div>
                 </div>
             </div>
@@ -187,7 +209,9 @@
             <!-- END RESULTS/MAP CARD -->
             <!----------------------------------------------------------------->
         </div>
+        <!----------------------------------------------------------------->
         <!-- END CONTENT WRAPPER -->
+        <!----------------------------------------------------------------->
     </div>
     <!----------------------------------------------------------------->
     <!-- END PAGE WRAPPER -->
